<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

    <TextView
        android:id="@+id/apellidoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/surname"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreFrield" />

    <EditText
        android:id="@+id/tlfField"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/placeholder_tlf"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreFrield"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:ems="10"
        android:hint="@string/placeholder_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/apellidoField"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:ems="10"
        android:hint="@string/placeholder_surname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidoText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tlf"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidoField" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:onClick="guardar"
        android:text="@string/btn_save"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlfField" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:onClick="eliminar"
        android:text="@string/btn_delete"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        android:onClick="editar"
        android:text="@string/btn_edit"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/deleteButton" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        android:onClick="buscar"
        android:text="@string/btn_load"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>